[package]
name = "aniMidi"
version = "0.1.0"
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "*"

[dependencies]
imgui = "*"
winit = "*"
imgui-winit-support = "*"
glium = "*"
imgui-glium-renderer = "*"